# pySwitchbot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  et --hard 4e38c74  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci.yaml  ci.yml  pr-title.yml  python-publish.yml
docs/: adding-device-support.md
switchbot/: __init__.py  adv_parser.py  const.py  discovery.py  enum.py  helpers.py  utils.py
switchbot/adv_parsers/: __init__.py  _sensor_th.py  air_purifier.py  art_frame.py  blind_tilt.py  bot.py  bulb.py  ceiling_light.py  climate_panel.py  contact.py  curtain.py  fan.py  hub2.py  hub3.py  hubmini_matter.py  humidifier.py  keypad.py  keypad_vision.py  leak.py  light_strip.py  lock.py  meter.py  motion.py  plug.py  presence_sensor.py  relay_switch.py  remote.py  roller_shade.py  smart_thermostat_radiator.py  vacuum.py  weather_station.py
switchbot/const/: __init__.py  air_purifier.py  climate.py  const.py  evaporative_humidifier.py  fan.py  hub2.py  hub3.py  light.py  lock.py  presence_sensor.py
switchbot/devices/: air_purifier.py  art_frame.py  base_cover.py  base_light.py  blind_tilt.py  bot.py  bulb.py  ceiling_light.py  climate_panel.py  curtain.py  device.py  evaporative_humidifier.py  fan.py  humidifier.py  keypad.py  keypad_vision.py  light_strip.py  lock.py  meter.py  meter_pro.py  plug.py  relay_switch.py  remote_with_screen.py  roller_shade.py  smart_thermostat_radiator.py  universal_remote.py  vacuum.py  weather_station.py
tests/: __init__.py  test_adv_parser.py  test_air_purifier.py  test_art_frame.py  test_base_cover.py  test_blind_tilt.py  test_bot.py  test_bulb.py  test_ceiling_light.py  test_climate_panel.py  test_colormode_imports.py  test_curtain.py  test_device.py  test_device_basic_info_guards.py  test_discovery_callback.py  test_encrypted_device.py  test_evaporative_humidifier.py  test_fan.py  test_helpers.py  test_hub2.py  test_hub3.py  test_humidifier.py  test_keypad.py  test_keypad_vision.py  test_lock.py  test_meter.py  test_meter_pro.py  test_plug.py  test_relay_switch.py  test_remote_with_screen.py  test_roller_shade.py  test_short_mfr_guards.py  test_short_payload_guards.py  test_smart_thermostat_radiator.py  test_strip_light.py  test_universal_remote.py  test_utils.py  test_vacuum.py
